--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6168,9 +6168,8 @@ body {
   align-items: center;
 }
 
-.empty .spotPlaceholder {
+.spotPlaceholder {
   opacity: 0.5;
-  vertical-align: middle;
 }
 
 .spotPlaceholder-top {
@@ -6424,6 +6423,14 @@ body {
   }
   100% {
     margin-top: -109px;
+  }
+}
+@keyframes slide-up-show-replay {
+  0% {
+    margin-top: -109px;
+  }
+  100% {
+    margin-top: 0;
   }
 }
 .title {
